# MonoMatrix

./: .gitignore  CMakeLists.txt  MonoMatrix.code-workspace  README.md  SYMBOLS_data_layout.txt
CMake_templates/: CMakeLists.txt  c_macros.h.in  common.h.in  macros.h.txt
core/: CMakeLists.txt  common.cpp  matrix_data.cpp  matrix_handling.cpp  parsing.cpp
core/include/: .gitignore  common.hpp  macros.h  matrix_data.h  matrix_handling.h  parsing.h
unit_tests/: CMakeLists.txt  core_tests.hpp  run_tests.cpp
utilities/display_check/: LED_matrix_check.ino
